--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "target": "es2019",
     "declaration": true,
     "outDir": "./lib",
+    "allowJs": true,
     "strict": true
   },
   "include": [
