--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
     "build": "tsc",
     "test": "jest --config jestconfig.json",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "eslint -c tsconfig.json",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
-    "preversion": "npm run lint",
+    "prepublishOnly": "npm test",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
   },
@@ -38,8 +36,6 @@
   "devDependencies": {
     "@types/jest": "^28.1.7",
     "@types/node": "^18.7.5",
-    "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
     "ts-jest": "^28.0.8",
     "typescript": "^4.7.4"
